--- a/inance-html/index.html
+++ b/inance-html/index.html
@@ -96,7 +96,7 @@
                 Services
               </h1>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui harum voluptatem adipisci. Quos molestiae saepe dicta nobis pariatur, tempora iusto, ad possimus soluta hic praesentium mollitia consequatur beatae, aspernatur culpa.
+                Welcome to Inance. This is a website where we provide support for maintenance services. Please note that this is for testing purpose.
               </p>
               <a href="">
                 Contact Us
